--- a/src/SandboxCore/Views/Account/Login.cshtml
+++ b/src/SandboxCore/Views/Account/Login.cshtml
@@ -1,8 +1,10 @@
 ﻿@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@using SandboxCore.Identity.Models
+
 @model LoginViewModel
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<User> SignInManager
 
 @{
     ViewData["Title"] = "Log in";
