--- a/src/SandboxCore/Views/Shared/_LoginPartial.cshtml
+++ b/src/SandboxCore/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using SandboxCore.Models
+@using Identity.Dapper.Entities
+@using SandboxCore.Identity.Models
 
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
