--- a/SandboxCore/Views/Account/MyProfile.cshtml
+++ b/SandboxCore/Views/Account/MyProfile.cshtml
@@ -7,7 +7,7 @@
         <div id="UserImage">
 
         </div>
-        <div class=" bs-component">
+        <div class="well bs-component">
             <form class="form-horizontal" asp-route-returnurl="@ViewContext.HttpContext.Request.Query["returnUrl"]">
                 <fieldset>
                     <div class="form-group">
