--- a/SandboxCore/Views/Testing/myform.cshtml
+++ b/SandboxCore/Views/Testing/myform.cshtml
@@ -4,7 +4,7 @@
 
 
 
-@using(Html.BeginForm("myform", "testing", new {code = "" }))
+@using (Html.BeginForm("myform", "testing", new { code = "" }))
 {
     <input type="text" value="123" />
 }
@@ -15,6 +15,11 @@
     
 </form>
 
+@{
+    var someid = "asdf";
+    string baseRoute = Url.Action("myform", "testing", new { code = "" }).ToString();
+    
+}
 
 
 
