--- a/SandboxCore/Views/Testing/myform.cshtml
+++ b/SandboxCore/Views/Testing/myform.cshtml
@@ -30,6 +30,34 @@
 <div class="yourface" data-face="red">face 1</div>
 <div class="yourface" data-face="green">face 2</div>
 
+<table id="myTable">
+    <tr id="tr1" name="a"><td>1</td></tr>
+    <tr id="tr2"><td>2</td></tr>
+    <tr id="tr3"><td>3</td></tr>
+    <tr id="tr4"><td name="a">4</td></tr>
+    <tr id="tr5"><td>5</td></tr>
+    <tr id="tr6"><td>6</td></tr>
+    <tr id="tr7"><td name="a">7</td></tr>
+    <tr id="tr8"><td>8</td></tr>
+</table>
+
+<div class="row">
+    @for (var i = 1; i <= 4; i++)
+    {
+        <div class="col-xs-12">
+            @for (var j = 1; j <= 13; j++)
+            {
+                <div class=" c c-@i-@j"></div>
+            }
+        </div>
+    }
+    
+
+    <div class=" c "></div>
+
+    <div class=" c selected"></div>
+</div>
+
 
 @{ 
     var item = new { LinkToPage = "/Events/index" };
@@ -41,7 +69,9 @@
     </div>
 </a>
         
-
+<br />
+<button id="ajaxLoop" class="btn btn-primary">Infinite Loop</button>
+<button id="runTest" class="btn btn-primary">test</button>
 
 
 <script>
@@ -54,5 +84,71 @@
 
         });
         console.log(html);
+
+        $('#ajaxLoop').on('click', function ()
+        {
+            ajaxLoop(0);
+        });
+
+        $('#runTest').on('click', function ()
+        {
+            test();
+        });
+        
     });
+
+    function on(elem, type, fn)
+    {
+        console.log('on');
+    }
+
+    function ajaxLoop(i)
+    {
+        if(i < 20)
+            $.ajax(
+            {
+                url: "/testing/forceWait/15",
+                success: function (result)
+                {
+                    ajaxLoop(++i);
+                },
+                error: function (e)
+                {
+                
+                }
+            });
+
+    }
+
+    function test()
+    {
+        //for (var i = 0; i < 5; i++)
+        //    console.log(i);
+
+        //console.log(i);
+        //console.log('-----------------------');
+        //for (let j = 0; j < 5; j++)
+        //    console.log(j);
+
+        //console.log(j);
+        //console.log('-----------------------');
+        var outerVar = 'outerVar';
+        let outerLet = 'outerLet';
+        if (true)
+        {
+            var innerVar = 'innerVar';
+            let innerLet = 'innerLet';
+            console.log('inside if');
+            console.log(outerVar);
+            console.log(outerLet);
+            console.log(innerVar);
+            console.log(innerLet);
+        }
+        console.log('after if');
+        console.log(outerVar);
+        console.log(outerLet);
+        console.log(innerVar);
+        console.log(innerLet);
+    }
+     
 </script>
