--- a/SandboxCore/Views/Testing/myform.cshtml
+++ b/SandboxCore/Views/Testing/myform.cshtml
@@ -22,57 +22,76 @@
     
 }
 
-<button data-id="@(x ?? "0")"></button>
-
-<div class="face" data-face="red"></div>
-<div class="face" data-face="green"></div>
-
-<div class="yourface" data-face="red">face 1</div>
-<div class="yourface" data-face="green">face 2</div>
-
-<table id="myTable">
-    <tr id="tr1" name="a"><td>1</td></tr>
-    <tr id="tr2"><td>2</td></tr>
-    <tr id="tr3"><td>3</td></tr>
-    <tr id="tr4"><td name="a">4</td></tr>
-    <tr id="tr5"><td>5</td></tr>
-    <tr id="tr6"><td>6</td></tr>
-    <tr id="tr7"><td name="a">7</td></tr>
-    <tr id="tr8"><td>8</td></tr>
-</table>
-
-<div class="row">
-    @for (var i = 1; i <= 4; i++)
-    {
-        <div class="col-xs-12">
-            @for (var j = 1; j <= 13; j++)
-            {
-                <div class=" c c-@i-@j"></div>
-            }
-        </div>
-    }
-    
-
-    <div class=" c "></div>
-
-    <div class=" c selected"></div>
-</div>
 
 
-@{ 
-    var item = new { LinkToPage = "/Events/index" };
+
+@{ Html.BeginForm("getstuff", "Testing", FormMethod.Post);
+    <input type="hidden" value="123" />
+    <button id="submit" type="submit">Push Me</button>
 }
 
-<a title="" class="videocarouselText" href=@item.LinkToPage.ToString()>
-    <div class="textMobileCut" style="text-align:center;">
-        asdf
-    </div>
-</a>
-        
-<br />
-<button id="ajaxLoop" class="btn btn-primary">Infinite Loop</button>
-<button id="runTest" class="btn btn-primary">test</button>
+<script>
+    @{ 
+        var model = ViewData["stuff"] as Model;
+    }
+    var x = {
+       '@(model)': '@(model)'
 
+    }
+</script>
+
+<div class="hidden">
+    <button data-id="@(x ?? "0")"></button>
+
+    <div class="face" data-face="red"></div>
+    <div class="face" data-face="green"></div>
+
+    <div class="yourface" data-face="red">face 1</div>
+    <div class="yourface" data-face="green">face 2</div>
+
+    <table id="myTable" class="hidden">
+        <tr id="tr1" name="a"><td>1</td></tr>
+        <tr id="tr2"><td>2</td></tr>
+        <tr id="tr3"><td>3</td></tr>
+        <tr id="tr4"><td name="a">4</td></tr>
+        <tr id="tr5"><td>5</td></tr>
+        <tr id="tr6"><td>6</td></tr>
+        <tr id="tr7"><td name="a">7</td></tr>
+        <tr id="tr8"><td>8</td></tr>
+    </table>
+
+    <div class="row hidden">
+        @for (var i = 1; i <= 4; i++)
+    {
+            <div class="col-xs-12">
+                @for (var j = 1; j <= 13; j++)
+            {
+                    <div class=" c c-@i-@j"></div>
+            }
+            </div>
+    }
+
+
+        <div class=" c "></div>
+
+        <div class=" c selected"></div>
+    </div>
+
+
+    @{
+        var item = new { LinkToPage = "/Events/index" };
+    }
+
+    <a title="" class="videocarouselText" href=@item.LinkToPage.ToString()>
+        <div class="textMobileCut" style="text-align:center;">
+            asdf
+        </div>
+    </a>
+
+    <br />
+    <button id="ajaxLoop" class="btn btn-primary">Infinite Loop</button>
+    <button id="runTest" class="btn btn-primary">test</button>
+</div>
 
 <script>
     $(document).ready(function()
@@ -94,7 +113,13 @@
         {
             test();
         });
-        
+
+        #('#submit').on('click', function (e)
+        {
+            e.preventDefault();
+
+
+        });
     });
 
     function on(elem, type, fn)
@@ -150,5 +175,10 @@
         console.log(innerVar);
         console.log(innerLet);
     }
-     
+
+    function PostSubmit()
+    {
+
+
+    }
 </script>
