adds react test

--- a/SandboxCore/wwwroot/scss/testing.scss
+++ b/SandboxCore/wwwroot/scss/testing.scss
@@ -22,7 +22,36 @@
     }
 }
 
+#container {
+    height: 700px;
+    width: 250px;
+    overflow-y: hidden;
+    position: relative;
 
+    .fast {
+        position: absolute;
+        top: 0;
+        div {
+            
+            height: 80px;
+            width: 100%;
+        }
+    }
+
+    .slow {
+        width:100%;
+        
+        position: absolute;
+        top: 0;
+        div {
+            
+            height: 80px;
+            width: 100%;
+            opacity: .3;
+            border-bottom:1px dotted white;
+        }
+    }
+}
 
 
 
