--- a/SandboxCore/wwwroot/css/site.css
+++ b/SandboxCore/wwwroot/css/site.css
@@ -149,7 +149,7 @@ textarea {
 
 #container {
   height: 700px;
-  width: 250px;
+  min-width: 250px;
   overflow-y: hidden;
   position: relative; }
   #container .fast {
