--- a/SandboxCore/wwwroot/scss/testing.css
+++ b/SandboxCore/wwwroot/scss/testing.css
@@ -17,7 +17,7 @@
 
 #container {
   height: 700px;
-  width: 250px;
+  min-width: 250px;
   overflow-y: hidden;
   position: relative; }
   #container .fast {
